--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <!--End Carousel-->
 
     <!--Service-->
-    <h2 style="margin-top: 60px; text-align: center; padding-left: 20px;"><strong>Our Services</strong><img src="assets/paws.png" alt="paws" width="40px" height="40px"></h2>
+    <h2 style="margin-top: 60px; text-align: center;"><strong>Our Services</strong><img src="assets/paws.png" alt="paws" width="40px" height="40px"></h2>
      <div id="article">
         <div class="article">
           <div class="row article-service">
@@ -186,7 +186,7 @@
     <footer class="footer">
           <div class="container-fluid text-center">
               <div class="row">
-                  <div class="col">
+                  <div class="col col-quick">
                       <h4>Quick Link</h4>
                       <a href="home.html">Home</a>
                       
