--- a/article.html
+++ b/article.html
@@ -12,10 +12,10 @@
 </head>
 <body style="font-family: 'Poppins', sans-serif;">
   <!-- Navbar -->
-   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #16A4E0;">
+   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #00AEEF;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#home.html">
-            <img src="assets/logo.jpeg" alt="Logo" style="height: 40px; width: 40px;">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/icon.png" alt="Logo" style="height: 40px; width: 40px;">
           </a>
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -53,22 +53,22 @@
     <div id="article">
         <div class="article">
             <div class="row">
-              <div class="col-4" style="padding-right: 85px;">
+              <div class="col-4">
                 <a href="https://www.bbc.com/indonesia/indonesia-40741155"><img src="assets/a1.jpeg" alt="miaw"></a>
-                <h5><strong>Dog's life, worth than a dog <br>meat on the satay</strong></h5>
+                <h5><strong>Dog's life, worth than a dog meat on the satay</strong></h5>
                 <p>Dinas Peternakan dan Kesehatan Hewan (PKH) Provinsi Bali membentuk tim investigasi perdagangan daging anjing untuk konsumsi manusia <a href="https://www.bbc.com/indonesia/indonesia-40741155" style="text-align: justify; color: #4d4d4d !important;">Baca Selengkapnya...</a></p>
               </div>
 
               <div class="col-4">
-                <a href="https://letsadoptindonesia.org/jenis-cacing-parasit-yang-menginfeksi-hewan-peliharaan/"><img src="assets/a2.jpeg" alt="miaw"></a>
-                <h5><strong>Cacing Parasit pada Hewan <br>Peliharaan</strong></h5>
-                <p style="padding-right: 100px;">Masih dalam tema “Cacingan”, kali ini kita akan bahas beberapa jenis cacing parasit yang biasa menginfeksi hewan peliharaan <a href="https://letsadoptindonesia.org/jenis-cacing-parasit-yang-menginfeksi-hewan-peliharaan/">Baca Selengkapnya...</a></p>
+                <a href="https://letsadoptindonesia.org/jenis-cacing-parasit-yang-menginfeksi-hewan-peliharaan/"><img src="assets/a2.jpg" alt="miaw"></a>
+                <h5><strong>Cacing Parasit pada Hewan Peliharaan</strong></h5>
+                <p>Masih dalam tema “Cacingan”, kali ini kita akan bahas beberapa jenis cacing parasit yang biasa menginfeksi hewan peliharaan <a href="https://letsadoptindonesia.org/jenis-cacing-parasit-yang-menginfeksi-hewan-peliharaan/">Baca Selengkapnya...</a></p>
               </div>
            
-              <div class="col-4" style="padding-left: 45px;">
+              <div class="col-4">
                 <a href="https://cppetindo.com/pet-torial/cara-merawat-anjing"><img src="assets/a3.jpeg" alt="miaw"></a>
-                <h5><strong>Poin Penting Merawat Bubub <br>si Anjing, Nomor 5 bikin kaget</strong></h5>
-                <p style="padding-right: 60px;">Melalui artikel ini, kamu akan mempelajari mengenai bagaimana cara merawat anjing dengan baik dan benar agar mereka terhindar dari stres <a href="https://cppetindo.com/pet-torial/cara-merawat-anjing">Baca Selengkapnya...</a></p>
+                <h5><strong>Poin Penting Merawat Bubub si Anjing, Nomor 5 bikin kaget</strong></h5>
+                <p>Melalui artikel ini, kamu akan mempelajari mengenai bagaimana cara merawat anjing dengan baik dan benar agar mereka terhindar dari stres <a href="https://cppetindo.com/pet-torial/cara-merawat-anjing">Baca Selengkapnya...</a></p>
               </div>
             </div>
         </div>
@@ -76,24 +76,24 @@
 
     <div class="article">
         <div class="row">
-          <div class="col-4" style="padding-right: 85px;">
+          <div class="col-4">
             <a href="https://letsadoptindonesia.org/jangan-anggap-remeh-cacingan-pada-hewan-peliharaan/"><img src="assets/a4.jpeg" alt="miaw"></a>
-            <h5><strong>Jangan Anggap Remeh jika <br> Kucing Anda Cacingan!</strong></h5>
+            <h5><strong>Jangan Anggap Remeh jika Kucing Anda Cacingan!</strong></h5>
             <p> Cacingan merupakan salah satu masalah kesehatan yang umum diderita baik anjing maupun kucing dan penularannya sangatlah mudah <a href="https://letsadoptindonesia.org/jangan-anggap-remeh-cacingan-pada-hewan-peliharaan/">Baca Selengkapnya...</a></p>
             <!--<p><b>Jangan Anggap Remeh Cacingan <br>  pada Hewan!</b></p>-->
           </div>
 
           <div class="col-4">
-            <a href="https://www.halodoc.com/artikel/tak-hanya-pada-anjing-ini-ciri-ciri-kucing-rabies-yang-perlu-diwaspadai"><img src="assets/article 5.jpeg" alt="miaw"></a>
-            <h5><strong>Kenali ciri-ciri rabies pada <br>hewan peliharaan anda</strong></h5>
-            <p style="padding-right: 100px;"> Rabies merupakan penyakit berbahaya yang menular pada hewan. Ketika virus rabies memasuki tubuh maka terjadi kerusakan pada saraf pusat <a href="https://www.halodoc.com/artikel/tak-hanya-pada-anjing-ini-ciri-ciri-kucing-rabies-yang-perlu-diwaspadai">Baca Selengkapnya...</a></p>
+            <a href="https://www.halodoc.com/artikel/tak-hanya-pada-anjing-ini-ciri-ciri-kucing-rabies-yang-perlu-diwaspadai"><img src="assets/article 9.jpeg" alt="miaw"></a>
+            <h5><strong>Kenali ciri-ciri rabies pada hewan peliharaan anda</strong></h5>
+            <p> Rabies merupakan penyakit berbahaya yang menular pada hewan. Ketika virus rabies memasuki tubuh maka terjadi kerusakan pada saraf pusat <a href="https://www.halodoc.com/artikel/tak-hanya-pada-anjing-ini-ciri-ciri-kucing-rabies-yang-perlu-diwaspadai">Baca Selengkapnya...</a></p>
             <!--<p><b>Kenali ciri-ciri rabies pada hewan <br> peliharaan anda</b></p>-->
           </div>
 
-          <div class="col-4" style="padding-left: 45px;">
+          <div class="col-4">
             <a href="https://hewania.com/sterilisasi-hewan/9873/"><img src="assets/article 6.png" alt="miaw"></a>
-            <h5><strong>Apakah sterilisasi untuk hewan <br>itu penting?</strong></h5>
-            <p style="padding-right: 60px;">Salah satu cara menjaga kesejahteraan hewan peliharaan adalah melakukan sterilisasi.  Melakukan sterilisasi dapat mengatasi sejumlah hal <a href="https://hewania.com/sterilisasi-hewan/9873/">Baca Selengkapnya...</a></p>
+            <h5><strong>Apakah sterilisasi untuk hewan itu penting?</strong></h5>
+            <p>Salah satu cara menjaga kesejahteraan hewan peliharaan adalah melakukan sterilisasi.  Melakukan sterilisasi dapat mengatasi sejumlah hal <a href="https://hewania.com/sterilisasi-hewan/9873/">Baca Selengkapnya...</a></p>
             <!--<p><b>Apakah sterilisasi untuk hewan itu <br> penting?</b></p>-->
           </div>
         </div>
@@ -101,24 +101,24 @@
 
     <div class="article"  >
         <div class="row" >
-          <div class="col-4" style="padding-right: 85px;">
+          <div class="col-4">
             <a href="https://www.klikdokter.com/info-sehat/kesehatan-umum/pertolongan-pertama-bila-digigit-anjing"><img src="assets/a5.jpeg" alt="miaw"></a>
-            <h5><strong>Cara membersihkan bekas <br>cakaran atau gigitan anjing!</strong></h5>
+            <h5><strong>Cara membersihkan bekas cakaran atau gigitan anjing!</strong></h5>
             <p>Jika kamu atau orang yang kamu kenal digigit anjing, jangan panik atau bahkan menyepelekannya. Segera lakukan langkah pertolongan pertama ini <a href="https://www.klikdokter.com/info-sehat/kesehatan-umum/pertolongan-pertama-bila-digigit-anjing" style="color: black;">Baca Selengkapnya...</a></p>
             <!--<p><b>Cara membersihkan bekas luka <br>  cakaran atau gigitan anjing!</b></p>-->
           </div>
 
           <div class="col-4">
             <a href="https://cppetindo.com/pet-torial/makanan-kucing-umur-1-bulan"><img src="assets/a6.jpeg" alt="miaw"></a>
-            <h5><strong>9 Rekomendasi makanan bagus <br>untuk pertumbuhan kucing</strong></h5>
-            <p style="padding-right: 100px;">Lantas, apa saja menu makanan yang bisa diberikan untuk anabul cilik ini? Langsung simak saja artikel ini untuk menemukan rekomendasi makanan <a href="https://cppetindo.com/pet-torial/makanan-kucing-umur-1-bulan">Baca Selengkapnya...</a></p>
+            <h5><strong>9 Rekomendasi makanan bagus untuk pertumbuhan kucing</strong></h5>
+            <p>Lantas, apa saja menu makanan yang bisa diberikan untuk anabul cilik ini? Langsung simak saja artikel ini untuk menemukan rekomendasi makanan <a href="https://cppetindo.com/pet-torial/makanan-kucing-umur-1-bulan">Baca Selengkapnya...</a></p>
             <!--<p><b>7 Rekomendasi makanan yang <br> bagus untuk pertumbuhan kucing</b></p>-->
           </div>
 
-          <div class="col-4" style="padding-left: 45px;">
+          <div class="col-4">
             <a href="https://nutrimax.co.id/5-ciri-ciri-terkena-rabies-setelah-digigit-kucing/"><img src="assets/a7.jpeg" alt="miaw"></a>
-            <h5><strong>Apa yang harus dilakukan ketika <br>terkena gigitan kucing rabies?</strong></h5>
-            <p style="padding-right: 60px;">Rabies merupakan penyakit serius yang bisa menyerang manusia. Penyebab utama rabies pada manusia adalah gigitan hewan yang terinfeksi <a href="https://nutrimax.co.id/5-ciri-ciri-terkena-rabies-setelah-digigit-kucing/">Baca Selengkapnya...</a></p>
+            <h5><strong>Apa yang harus dilakukan ketika terkena gigitan kucing rabies?</strong></h5>
+            <p>Rabies merupakan penyakit serius yang bisa menyerang manusia. Penyebab utama rabies pada manusia adalah gigitan hewan yang terinfeksi <a href="https://nutrimax.co.id/5-ciri-ciri-terkena-rabies-setelah-digigit-kucing/">Baca Selengkapnya...</a></p>
             <!--<p><b>Apa yang harus dilakukan ketika <br>terkena gigitan kucing yang <br>terinfeksi rabies?</b></p>-->
           </div>
         </div>
@@ -133,7 +133,7 @@
               <div class="row">
                   <div class="col col-quick">
                       <h4>Quick Link</h4>
-                      <a href="home.html">Home</a>
+                      <a href="index.html">Home</a>
                       <a href="article.html">Services</a>
                       <a href="aboutus.html">About Us</a>
                   </div>
