--- a/donate.html
+++ b/donate.html
@@ -15,10 +15,10 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #16A4E0;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #00AEEF;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#home.html">
-            <img src="assets/logo.jpeg" alt="Logo" style="height: 40px; width: 40px;">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/icon.png" alt="Logo" style="height: 40px; width: 40px;">
           </a>
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -56,7 +56,7 @@
     <div class="container" id="article">
             <div class="row">
               <div class="col-sm-6 d-flex align-items-center justify-content-center">
-                <img src="assets/donate-1.jpg" class="img-fluid" alt="Artikel Image" style="width: 575px; height: 325px; border-radius: 10px;">
+                <img src="assets/donate-1.jpg" class="img-fluid article-img" alt="Artikel Image">
               </div>
 
               <div class="col-sm-6 d-flex flex-column justify-content-center">
@@ -73,7 +73,7 @@
       <div class="container" id="article">
             <div class="row">
               <div class="col-sm-6 d-flex align-items-center justify-content-center">
-                <img src="assets/donate-2.jpg" class="img-fluid" alt="Artikel Image" style="width: 575px; height: 325px; border-radius: 10px;">
+                <img src="assets/donate-2.jpg" class="img-fluid article-img" alt="Artikel Image">
               </div>
 
               <div class="col-sm-6 d-flex flex-column justify-content-center">
@@ -90,7 +90,7 @@
         <div class="container" id="article">
             <div class="row">
               <div class="col-sm-6 d-flex align-items-center justify-content-center">
-                <img src="assets/donate-3.jpg" class="img-fluid" alt="Artikel Image" style="width: 575px; height: 325px; border-radius: 10px;">
+                <img src="assets/donate-3.jpg" class="img-fluid article-img" alt="Artikel Image">
               </div>
 
               <div class="col-sm-6 d-flex flex-column justify-content-center">
@@ -107,7 +107,7 @@
         <div class="container" id="article">
           <div class="row" style="margin-top: 10px;">
             <div class="col-sm-6 d-flex align-items-center justify-content-center">
-              <img src="assets/donate-4.jpg" class="img-fluid" alt="Artikel Image" style="width: 575px; height: 325px; border-radius: 10px;">
+              <img src="assets/donate-4.jpg" class="img-fluid article-img" alt="Artikel Image">
             </div>
 
             <div class="col-sm-6 d-flex flex-column justify-content-center">
@@ -127,10 +127,10 @@
     <!--Footer-->
      <footer class="footer">
           <div class="container-fluid text-center">
-              <div class="row">
+              <div class="row row-footer">
                   <div class="col col-quick">
                       <h4>Quick Link</h4>
-                      <a href="home.html">Home</a>
+                      <a href="index.html">Home</a>
                       <a href="article.html">Services</a>
                       <a href="aboutus.html">About Us</a>
                   </div>
