--- a/vaccine.html
+++ b/vaccine.html
@@ -15,10 +15,10 @@
 </head>
 <body style="font-family: 'Poppins', sans-serif;">
     <!-- Navbar -->
-     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #16A4E0;">
+     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #00AEEF;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#home.html">
-            <img src="assets/logo.jpeg" alt="Logo" style="height: 40px; width: 40px;">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/icon.png" alt="Logo" style="height: 40px; width: 40px;">
           </a>
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -148,8 +148,7 @@
               <div class="row">
                   <div class="col col-quick">
                       <h4>Quick Link</h4>
-                      <a href="home.html">Home</a>
-                      
+                      <a href="index.html">Home</a>
                       <a href="article.html">Services</a>
                       <a href="aboutus.html">About Us</a>
                   </div>
